tests/snapshots/tui_snapshots__snapshot_cheatsheet_empty.snap
---
source: tests/tui_snapshots.rs
assertion_line: 70
expression: render_to_string(&mut a)
---
 🧪  Helixir    📦  Module 1/2   📝  Exercise 2/2   [?] help

┌ 📚  Exercises ────────────────────┐┌ Exercise Detail ─────────────────────────────────────────────────────────────────┐
│ ▼ 🗂  M┌ 📜  Grimoire — Spells you've learned ───────────────────────────────────────────────────────────────┐         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │  Brew your first exercise to begin your grimoire 🧪                                                 │         │
│       │                                                                                                    │         │
│ ▶ 🗂  S│                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       └ j/k to scroll · c or Esc to close ─────────────────────────────────────────────────────────────────┘         │
└──────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────┘

  🏆  ░░░░░░░░░░░░░░░░░░░░ 0/4 (0%)      💡 [/] search  [F] filter  🔄 [r] reset  ⏭️  [n] next  🚪 [q] quit
