tests/snapshots/tui_snapshots__snapshot_cheatsheet_populated.snap
---
source: tests/tui_snapshots.rs
assertion_line: 59
expression: render_to_string(&mut a)
---
 🧪  Helixir    📦  Module 1/2   📝  Exercise 2/2   [?] help

┌ 📚  Exercises ────────────────────┐┌ Exercise Detail ─────────────────────────────────────────────────────────────────┐
│ ▼ 🗂  M┌ 📜  Grimoire — Spells you've learned ───────────────────────────────────────────────────────────────┐         │
│       │                                                                                                    │         │
│    ✅  │  🗂  Movement  (1/2)                                🗂  Selection  (1/2)                             │         │
│       │                                                                                                    │         │
│       │     h         left                                    x         line                               │         │
│ ▶ 🗂  S│     l         right                                   h         left                               │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       │                                                                                                    │         │
│       └ j/k to scroll · c or Esc to close ─────────────────────────────────────────────────────────────────┘         │
└──────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────┘

  🏆  ██████████░░░░░░░░░░ 2/4 (50%)      💡 [/] search  [F] filter  🔄 [r] reset  ⏭️  [n] next  🚪 [q] quit
