tests/snapshots/tui_snapshots__snapshot_failing_exercise_many_diffs.snap
---
source: tests/tui_snapshots.rs
assertion_line: 128
expression: render_to_string(&mut a)
---
 🧪  Helixir    📦  Module 1/2   📝  Exercise 2/2   [?] help

┌ 📚  Exercises ────────────────────┐┌ Exercise Detail ─────────────────────────────────────────────────────────────────┐
│ ▼ 🗂  Movement (1/2)              ││                                                                                  █
│                                  ││  ⭐ ⭐  Move 2                                                                     █
│    ✅  Move 1                     ││  Category: Movement   Difficulty: 2/3                                            █
│       Move 2                     ││                                                                                  █
│                                  ││  ⌨️   COMMANDS                                                                    █
│ ▶ 🗂  Selection (1/2)             ││                                                                                  █
│                                  ││     w       word                                                                 █
│                                  ││                                                                                  █
│                                  ││  📋  INSTRUCTIONS                                                                 █
│                                  ││                                                                                  █
│                                  ││     Instructions for Move 2                                                      █
│                                  ││                                                                                  █
│                                  ││                                                                                  █
│                                  ││  ───────────────────────────────────────────                                     █
│                                  ││                                                                                  │
│                                  ││  ❌  7 differences found                                                          │
│                                  ││                                                                                  │
│                                  ││     line 1                                                                       │
│                                  ││     yours:    helloA                                                             │
│                                  ││     expected: helloB                                                             │
│                                  ││                                                                                  │
│                                  ││     line 2                                                                       │
│                                  ││     yours:    foo bar                                                            │
│                                  ││     expected: foo ·bar                                                           │
│                                  ││                                                                                  │
│                                  ││     line 3                                                                       │
│                                  ││     yours:    completely·different                                               │
│                                  ││     expected: xyz                                                                │
│                                  ││                                                                                  │
│                                  ││     line 4                                                                       │
│                                  ││     yours:    short                                                              │
│                                  ││     expected: shorter                                                            │
│                                  ││                                                                                  │
│                                  ││     line 5                                                                       │
└──────────────────────────────────┘└ ↕ j/k to scroll ─────────────────────────────────────────────────────────────────┘

  🏆  ██████████░░░░░░░░░░ 2/4 (50%)      💡 [/] search  [F] filter  🔄 [r] reset  ⏭️  [n] next  🚪 [q] quit
